# makanwell

./: .env.example  .gitignore  HealthierEateries.geojson  README.md  index.html  package-lock.json  package.json  railway.toml  server.js  tailwind.config.js  vite.config.js
api/: chat.js  hawker-search.js  places.js
api/lib/: openai.js
api/voice/: parse.js  transcribe.js  tts.js
public/: food_database.json  hawker_eateries.json
scripts/: cleanHealthierEateries.mjs
server/: Dockerfile  dev-api.mjs  pyproject.toml  railway.toml  realtime-config.mjs  realtime-relay-index.mjs  realtime-relay.mjs  server.py
server/app/: agent_config.py  food_tools.py  scoring.py  utils.py
server/data/: food_database.json  questionnaire.json
src/: App.jsx  index.css
src/components/: VoiceCallScreen.jsx
src/components/chat/: AudioChat.jsx  AudioPlayback.jsx  ChatHistory.jsx  ChatLoadingDots.jsx  ChatWindow.jsx  Composer.jsx  MessageBubble.jsx
src/data/: foodSchema.json  postalRegions.json
src/hooks/: useAudio.js  useWebsocket.js
src/lib/: audioUtils.js  classify.js  conversationCall.js  realtimeQuestionnaire.js  realtimeTurnHelper.js  scoring.js  voice.js  voiceApi.js
src/lib/wavtools/lib/: wav_recorder.js
